--- a/TailorMadeTours/MainWindow.xaml
+++ b/TailorMadeTours/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TailorMadeTours"
+        xmlns:views="clr-namespace:TailorMadeTours.UserControls"
         mc:Ignorable="d"
         Title="Tailor-made Tours - Chicago"
         Height="700"
@@ -11,33 +12,21 @@
         WindowState="Maximized"
         FontSize="18">
 
-  <StackPanel>
+  <StackPanel >
     <TextBlock TextWrapping="Wrap"
                Text="Tailor-made Tours - Chicago"
                FontSize="24"
                FontWeight="Bold" />
     <TabControl MinHeight="300">
       <TabItem Header="Tour Stops">
-        <Grid Background="#FFE5E5E5" />
+        <views:TourStopsView />
       </TabItem>
       <TabItem Header="Details">
-        <StackPanel>
-          <Grid  Height="250"
-                 Margin="0, 6, 0, 0">
-            <Grid.RowDefinitions>
-              <RowDefinition Height="1*" />
-              <RowDefinition Height="60" />
-            </Grid.RowDefinitions>
-            <Image Height="250"
-                   Source="Images/Stops/Pastry.jpg" 
-                   Grid.RowSpan="2"
-                   Stretch="UniformToFill"></Image>
-            <Rectangle Grid.Row="1" Fill="#66001E44"></Rectangle>
-          </Grid>
-        </StackPanel>
+        <views:DetailView />
       </TabItem>
       <TabItem Header="Weekly Calendar">
         <Grid Background="#FFE5E5E5" />
+
       </TabItem>
     </TabControl>
   </StackPanel>
