--- a/TailorMadeTours/UserControls/ScheduleView.xaml
+++ b/TailorMadeTours/UserControls/ScheduleView.xaml
@@ -6,7 +6,62 @@
              xmlns:local="clr-namespace:TailorMadeTours.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+  <Grid x:Name="ScheduleGrid"
+        Margin='3,20'>
+
+    <Grid.RowDefinitions>
+      <RowDefinition Height="45" />
+      <RowDefinition Height="30" />
+      <RowDefinition Height="30" />
+      <RowDefinition Height="30" />
+      <RowDefinition Height="30" />
+      <RowDefinition Height="30" />
+      <RowDefinition Height="30" />
+      <RowDefinition Height="30" />
+      <RowDefinition Height="30" />
+      <RowDefinition Height="30" />
+    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="Auto" />
+      <ColumnDefinition Width="1*" />
+      <ColumnDefinition Width="1*" />
+      <ColumnDefinition Width="1*" />
+      <ColumnDefinition Width="1*" />
+      <ColumnDefinition Width="1*" />
+      <ColumnDefinition Width="1*" />
+      <ColumnDefinition Width="1*" />
+    </Grid.ColumnDefinitions>
+    <Grid.Resources>
+      <Style TargetType='TextBlock'>
+        <Setter Property='Margin'
+                Value='3,0' />
+        <Setter Property='Foreground'
+                Value='Goldenrod' />
+        <Setter Property='TextWrapping'
+                Value='Wrap' />
+      </Style>
+    </Grid.Resources>
+    <TextBlock Grid.Row="0"
+               Grid.Column="1"
+               Text="Paddington's Pastries" />
+    <TextBlock Grid.Row="0"
+               Grid.Column="2"
+               Text="Buckingham Fountain" />
+    <TextBlock Grid.Row="0"
+               Grid.Column="3"
+               Text="Art Institute" />
+    <TextBlock Grid.Row="0"
+               Grid.Column="4"
+               Text="Zekki's" />
+    <TextBlock Grid.Row="0"
+               Grid.Column="5"
+               Text="Cloud Gate" />
+    <TextBlock Grid.Row="0"
+               Grid.Column="6"
+               Text="Lurie Garden" />
+    <TextBlock Grid.Row="0"
+               Grid.Column="7"
+               Text="Braid Line" />
             
-    </Grid>
+   </Grid>
 </UserControl>
