--- a/TailorMadeTours/UserControls/TourStopsView.xaml
+++ b/TailorMadeTours/UserControls/TourStopsView.xaml
@@ -1,15 +1,31 @@
 ﻿<UserControl x:Class="TailorMadeTours.UserControls.TourStopsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:TailorMadeTours.UserControls"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             mc:Ignorable="d"
+             d:DesignHeight="450"
+             d:DesignWidth="800">
   <Grid>
-    <ListBox x:Name="ToursListBox" ItemTemplate="{StaticResource TourTemplate}">
+    <Grid.RowDefinitions>
+      <RowDefinition Height="2*" />
+      <RowDefinition Height="1*" />
+    </Grid.RowDefinitions>
+    <ListBox x:Name="ToursListBox"
+             ItemTemplate="{StaticResource TourTemplate}"
+             MaxHeight="500">
 
     </ListBox>
+    <StackPanel Orientation="Horizontal"
+                Margin="10, 20, 0, 20"
+                Grid.Row="1">
+      <Button x:Name="CalcButton" 
+              Content="Calculate Tour Length"
+              Click="CalcButton_Click"/>
+      <TextBlock x:Name="MessageTextBlock" 
+                 Margin="20"/>
+    </StackPanel>
 
   </Grid>
 </UserControl>
